--- a/src/app/componentes/chat/chat.component.css
+++ b/src/app/componentes/chat/chat.component.css
@@ -48,12 +48,30 @@ body {
     border-radius: 4px;
 }
 
-.email-container {
-  color: white;
-  font-size: 20px;
+.logout-button {
+  background-color: #cc0000;
+  color: white !important;
+  border-radius: 4px;
   padding: 10px;
-  margin-left: auto; /* empuja este item a la derecha */
+  transition: background-color 0.3s ease;
 }
+
+.logout-button:hover {
+  background-color: #ff0000;
+}
+
+.logout-right {
+  margin-left: auto; 
+}
+
+.email-nav {
+margin-left: auto;
+margin-right: auto;
+margin-right: auto;
+font-size: 18px;
+color: #dcff5f;
+padding: 10px;
+}  
 
 /* === CHAT === */
 .chat-container {
