--- a/src/app/componentes/registro/registro.component.html
+++ b/src/app/componentes/registro/registro.component.html
@@ -9,16 +9,16 @@
 		<nav class="navbar">
 			<ul>
 				<li><a [routerLink]="['/chat']">Chat</a></li>
+				<li><a [routerLink]="['/home']">Home</a></li>
 				<li><a [routerLink]="['/yo']">Sobre Mi</a></li>
                 <li><a [routerLink]="['/encuesta']">Encuesta</a></li>
-                <li><a [routerLink]="['/puntajes']">Puntajes</a></li>
-				<li><a href="#">Log Out</a></li>
+                <li><a [routerLink]="['/puntajes']">Puntajes</a></li>				
 			</ul>
 		</nav>
 	</div>
 	
 	<div class="container-fluid">
-		<div class="row main-content bg-success text-center">
+		<div class="row main-content text-center">
 			<div class="col-md-4 text-center company__info">
 				<span class="company__logo"><h2><span class="fa fa-android"></span></h2></span>
 			</div>
