--- a/src/app/componentes/ahorcado/ahorcado.component.css
+++ b/src/app/componentes/ahorcado/ahorcado.component.css
@@ -50,12 +50,30 @@ body {
     border-radius: 4px;
 }
 
-.user-email {
-  color: white;
-  font-size: 20px;
+.logout-button {
+  background-color: #cc0000;
+  color: white !important;
+  border-radius: 4px;
   padding: 10px;
-  margin-left: auto;
+  transition: background-color 0.3s ease;
 }
+
+.logout-button:hover {
+  background-color: #ff0000;
+}
+
+.logout-right {
+  margin-left: auto; 
+}
+
+.user-email {
+margin-left: auto;
+margin-right: auto;
+margin-right: auto;
+font-size: 18px;
+color: #dcff5f;
+padding: 10px;
+}  
 
 .container {
   display: flex;
@@ -193,4 +211,107 @@ button:disabled {
 .ahorcado-dibujo {
   padding: 15px;
   border-radius: 10px;
+}
+
+/*pantalla chica*/
+@media screen and (max-width: 768px) {
+
+  .navbar {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .navbar ul {
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+
+  .navbar ul li {
+    margin: 10px 0;
+  }
+
+  .navbar ul li a {
+    font-size: 18px;
+    padding: 10px;
+    display: block;
+  }
+
+  .logout-button {
+    width: 100%;
+    text-align: center;
+  }
+
+  .container {
+    padding: 20px;
+    height: auto;
+    min-height: 100vh;
+    flex-direction: column;
+  }
+
+  .palabra-titulo {
+    font-size: 12px;
+    text-align: center;
+  }
+
+  .letra {
+    font-size: 18px;
+    margin: 0 2px;
+  }
+
+  .ahorcado-dibujo svg {
+    width: 90vw;
+    height: auto;
+  }
+
+  .fila-teclado {
+    flex-wrap: wrap;
+    gap: 6px;
+  }
+
+  button {
+    width: 40px;
+    height: 40px;
+    font-size: 12px;
+  }
+
+  .contenedor-juego {
+    flex-direction: column;
+    gap: 15px;
+  }
+
+  .info-juego {
+    width: 90%;
+    align-items: center;
+    text-align: center;
+  }
+}
+
+/* ===== PANTALLAS GRANDES  ===== */
+@media screen and (min-width: 1440px) {
+  .palabra-titulo {
+    font-size: 24px;
+  }
+
+  .letra {
+    font-size: 28px;
+  }
+
+  button {
+    width: 60px;
+    height: 60px;
+    font-size: 20px;
+  }
+
+  .info-juego {
+    width: 200px;
+  }
+
+  .vidas h2, .puntos h2 {
+    font-size: 20px;
+  }
+
+  .numero-intentos, .numero-puntos {
+    font-size: 28px;
+  }
 }
