--- a/src/app/componentes/ahorcado/ahorcado.component.html
+++ b/src/app/componentes/ahorcado/ahorcado.component.html
@@ -11,15 +11,13 @@
   <div class="container-nav">
     <nav class="navbar">
       <ul>
+        <li *ngIf="userEmail" class="user-email">{{ userEmail }}</li>
         <li><a [routerLink]="['/chat']">Chat</a></li>
         <li><a [routerLink]="['/home']">Home</a></li>        
         <li><a [routerLink]="['/yo']">Sobre Mi</a></li>        
         <li><a [routerLink]="['/encuesta']">Encuesta</a></li>
         <li><a [routerLink]="['/puntajes']">Puntajes</a></li>
-        <li><a href="#">Log Out</a></li>
-    <div class="user-email" *ngIf="userEmail">
-      {{ userEmail }}
-    </div>
+        <li class="logout-right"><a (click)="cerrarSesion()" class="logout-button">Log Out</a></li>
       </ul>
     </nav>
   </div>
