--- a/src/app/componentes/chat/chat.component.html
+++ b/src/app/componentes/chat/chat.component.html
@@ -1,13 +1,12 @@
 <div class="chat-container">
 <nav class="navbar">
   <ul>
-    <li><a [routerLink]="['/login']">Log in</a></li>
+    <li *ngIf="userEmail" class="email-nav">{{ userEmail }}</li>
     <li><a [routerLink]="['/home']">Home</a></li>
     <li><a [routerLink]="['/yo']">Sobre Mi</a></li>
     <li><a [routerLink]="['/encuesta']">Encuesta</a></li>
     <li><a [routerLink]="['/puntajes']">Puntajes</a></li>
-    <li><a href="#">Log Out</a></li>
-    <li class="email-container" *ngIf="userEmail">{{ userEmail }}</li>
+    <li class="logout-right"><a (click)="cerrarSesion()" class="logout-button">Log Out</a></li>
   </ul>
 </nav>
 
