--- a/src/app/componentes/encuesta/encuesta.component.css
+++ b/src/app/componentes/encuesta/encuesta.component.css
@@ -44,14 +44,30 @@ body {
     border-radius: 4px;
 }
 
-.email-container {
-  color: white;
-  font-size: 20px;
+.logout-button {
+  background-color: #cc0000;
+  color: white !important;
+  border-radius: 4px;
   padding: 10px;
-  margin-left: auto; /* empuja este item a la derecha */
+  transition: background-color 0.3s ease;
 }
 
+.logout-button:hover {
+  background-color: #ff0000;
+}
 
+.logout-right {
+  margin-left: auto; 
+}
+
+.user-email {
+margin-left: auto;
+margin-right: auto;
+margin-right: auto;
+font-size: 18px;
+color: #dcff5f;
+padding: 10px;
+} 
 /* CONTENEDOR FORMULARIO */
 .login-wrap {
   padding-top: 100px;
@@ -132,3 +148,4 @@ button[type="submit"] {
 button[type="submit"]:hover {
   background: linear-gradient(to right, #3578e5, #005be0);
 }
+
