--- a/src/app/componentes/home/home.component.css
+++ b/src/app/componentes/home/home.component.css
@@ -62,6 +62,30 @@ body {
     border-radius: 4px;
 }
 
+.logout-button {
+  background-color: #cc0000;
+  color: white !important;
+  border-radius: 4px;
+  padding: 10px;
+  transition: background-color 0.3s ease;
+}
+
+.logout-button:hover {
+  background-color: #ff0000;
+}
+
+.logout-right {
+  margin-left: auto; 
+}
+
+.user-email {
+margin-left: auto;
+margin-right: auto;
+margin-right: auto;
+font-size: 18px;
+color: #dcff5f;
+padding: 10px;
+}  
 /* --------- MODIFICACIONES DE GAME --------- */
 .games-grid {
     display: grid;
@@ -108,19 +132,71 @@ body {
     margin: 0;
 }
 
-/* --------- ENLACES --------- */
 a {
     text-decoration: none;
     color: inherit;
 }
 
-  .user-email {
-    color: white;
-    font-size: 20px;
+
+/* ========== PANTALLAS PEQUEÑAS ========== */
+@media screen and (max-width: 768px) {
+
+  .navbar {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .navbar ul {
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+
+  .navbar ul li {
+    margin: 10px 0;
+  }
+
+  .navbar ul li a {
+    font-size: 18px;
     padding: 10px;
-    display: inline-block;
-    margin-left: 30px; /* mismo margen que los demás */
-  }  
+    display: block;
+  }
+
+  .logout-button {
+    width: 100%;
+    text-align: center;
+  }
+
+  .user-email {
+    font-size: 14px;
+    margin-top: 10px;
+  }
+
+.games-grid {
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  margin-top: 120px;
+}
+
+  .game {
+    width: 80%;
+    padding: 15px;
+  }
+
+  .game img {
+    width: 80px;
+  }
+
+  .game h2 {
+    font-size: 20px;
+  }
+
+  .game p {
+    font-size: 12px;
+  }
+}
+
+
 
 
   
