--- a/src/app/componentes/home/home.component.html
+++ b/src/app/componentes/home/home.component.html
@@ -9,16 +9,13 @@
 <body>
     <div class="container-nav">
 		<nav class="navbar">
-			<ul>        
+			<ul><li *ngIf="userEmail" class="user-email">{{ userEmail }}</li>        
 				<li><a [routerLink]="['/chat']">Chat</a></li>
 				<li><a [routerLink]="['/yo']">Sobre Mi</a></li>
                 <li><a [routerLink]="['/encuesta']">Encuesta</a></li>
                 <li><a [routerLink]="['/puntajes']">Puntajes</a></li>
-				<li><a (click)="cerrarSesion()">Log Out</a></li>           
-                <li *ngIf="userEmail" class="user-email">
-                    {{ userEmail }}
-                </li>
-			</ul>
+				<li class="logout-right"><a (click)="cerrarSesion()" class="logout-button">Log Out</a></li>
+          </ul>
 		</nav>
 	</div>
     <div class="container">        
@@ -34,21 +31,21 @@
                 <a routerLink="/ahorcado">
                     <img src="ahorcado.png" alt="Ahorcado">
                     <h2>Ahorcado</h2>
-                    <p>Adiviná la palabra antes de que se complete el dibujo.</p>
+                    <p>Adiviná la palabra antes de que se complete el dibujo y ganá puntos.</p>
                 </a>
             </div>
             <div class="game">
                 <a routerLink="/mayorMenor">
                     <img src="mayormenor.jpg" alt="Mayor o menor">
                     <h2>Mayor o Menor</h2>
-                    <p>Adiviná si el próximo número será más alto o más bajo.</p>
+                    <p>Adiviná si el próximo número será más alto o más bajo y ganá puntos.</p>
                 </a>
             </div>
             <div class="game">
                 <a routerLink="/preguntados">
                   <img src="preguntados.png" alt="Preguntados">
                   <h2>Preguntados</h2>
-                  <p>Respondé preguntas de cultura general y ganá puntos.</p>
+                  <p>Respondé preguntas sobre los Simpsons y ganá puntos.</p>
                 </a>
               </div>
         </div>
