--- a/src/app/componentes/mayormenor/mayormenor.component.html
+++ b/src/app/componentes/mayormenor/mayormenor.component.html
@@ -1,12 +1,11 @@
 <nav class="navbar">
-  <ul>
+  <ul><li *ngIf="userEmail" class="user-email">{{ userEmail }}</li>    
     <li><a [routerLink]="['/chat']">Chat</a></li>
     <li><a [routerLink]="['/home']">Home</a></li>
     <li><a [routerLink]="['/yo']">Sobre Mi</a></li>
     <li><a [routerLink]="['/encuesta']">Encuesta</a></li>
     <li><a [routerLink]="['/puntajes']">Puntajes</a></li>
-    <li><a href="#">Log Out</a></li>
-    <li class="email-container" *ngIf="userEmail">{{ userEmail }}</li>
+   <li class="logout-right"><a (click)="cerrarSesion()" class="logout-button">Log Out</a></li>    
   </ul>
 </nav>
 
@@ -29,15 +28,5 @@
             <h2>PUNTOS: {{ puntos }}</h2>
             <h2>VIDAS: {{ vidasTotales  }}</h2>
         </div>
-
-        <div class="respuesta">
-            <h2 *ngIf="respuesta === 'Incorrecto'" style="color: #f31409">
-                Resultado: {{ respuesta }}
-            </h2>
-            <h2 *ngIf="respuesta === 'Correcto'" style="color: rgb(3, 187, 3)">
-                Resultado: {{ respuesta }}
-            </h2>
-        </div>
-    </div> 
-    
+    </div>     
 </div>
