--- a/src/app/componentes/puntajes/puntajes.component.css
+++ b/src/app/componentes/puntajes/puntajes.component.css
@@ -44,12 +44,30 @@ body, html {
     border-radius: 4px;
 }
 
-.email-container {
-  color: white;
-  font-size: 20px;
+.logout-button {
+  background-color: #cc0000;
+  color: white !important;
+  border-radius: 4px;
   padding: 10px;
+  transition: background-color 0.3s ease;
+}
+
+.logout-button:hover {
+  background-color: #ff0000;
+}
+
+.logout-right {
   margin-left: auto; 
 }
+
+.user-email {
+margin-left: auto;
+margin-right: auto;
+margin-right: auto;
+font-size: 18px;
+color: #dcff5f;
+padding: 10px;
+} 
 
 :host {
   display: flex;
@@ -204,3 +222,4 @@ h2 {
 .columna p:last-child {
   border-bottom: none;
 }
+
