cambios encuesta commit

--- a/src/app/componentes/home/home.component.html
+++ b/src/app/componentes/home/home.component.html
@@ -21,28 +21,28 @@
     <div class="container">        
         <div class="games-grid">
             <div class="game">
-                <a routerLink="/pacman">
+                <a routerLink="/juegos/pacman">
                     <img src="pacman.jpg" alt="Pacman">
                     <h2>Pacman</h2>
                     <p>Escapá de los fantasmas y comé todos los puntos para ganar.</p>
                 </a>
             </div>
             <div class="game">
-                <a routerLink="/ahorcado">
+                <a routerLink="/juegos/ahorcado">
                     <img src="ahorcado.png" alt="Ahorcado">
                     <h2>Ahorcado</h2>
                     <p>Adiviná la palabra antes de que se complete el dibujo y ganá puntos.</p>
                 </a>
             </div>
             <div class="game">
-                <a routerLink="/mayorMenor">
+                <a routerLink="/juegos/mayorMenor">
                     <img src="mayormenor.jpg" alt="Mayor o menor">
                     <h2>Mayor o Menor</h2>
                     <p>Adiviná si el próximo número será más alto o más bajo y ganá puntos.</p>
                 </a>
             </div>
             <div class="game">
-                <a routerLink="/preguntados">
+                <a routerLink="/juegos/preguntados">
                   <img src="preguntados.png" alt="Preguntados">
                   <h2>Preguntados</h2>
                   <p>Respondé preguntas sobre los Simpsons y ganá puntos.</p>
