--- a/src/app/componentes/pacman/pacman.component.html
+++ b/src/app/componentes/pacman/pacman.component.html
@@ -14,6 +14,11 @@
 	<div class="score-board">
 	  Puntos: {{ score }}
 	</div>
+
+	<div class="lives-board">
+	Vidas: {{ vidas }}
+	</div>
+
   
 	<!-- CONTENIDO PRINCIPAL -->
 	<div class="main-content">
