--- a/src/app/componentes/encuesta/encuesta.component.html
+++ b/src/app/componentes/encuesta/encuesta.component.html
@@ -1,8 +1,8 @@
 <nav class="navbar">
   <ul><li *ngIf="userEmail" class="user-email">{{ userEmail }}</li>    
-    <li><a [routerLink]="['/chat']">Chat</a></li>
-    <li><a [routerLink]="['/yo']">Sobre Mi</a></li>
-    <li><a [routerLink]="['/home']">Home</a></li>
+    <li *ngIf="userEmail"><a [routerLink]="['/chat']">Chat</a></li>
+    <li *ngIf="userEmail"><a [routerLink]="['/home']">Home</a></li>
+    <li><a [routerLink]="['/yo']">Sobre Mi</a></li>  
     <li><a [routerLink]="['/puntajes']">Puntajes</a></li>
     <li class="logout-right" *ngIf="userEmail">
   <a (click)="cerrarSesion()" class="logout-button">Log Out</a>
